Major activity fixing FindBug bugs